工厂方法模式

--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -10,13 +10,13 @@
 
 ##### 简单工厂模式的概述及定义
 
-概述：简单工厂模式并不属于 GoF 的23种经典设计模式，但是它的使用频率也很高，并且常常将它作为学习其他工厂模式的基础。由于在简单工厂模式中用于创建实例的方法通常是静态（static）方法，因此简单工厂模式又被称为**静态工厂方法模式**（Static Factory Method Pattern）
+- 概述：简单工厂模式并不属于 GoF 的 23 种经典设计模式，但是它的使用频率也很高，并且常常将它作为学习其他工厂模式的基础。由于在简单工厂模式中用于创建实例的方法通常是静态（static）方法，因此简单工厂模式又被称为**静态工厂方法模式**（Static Factory Method Pattern）
 
-定义：定义一个工厂类，它可以根据**参数**的不同返回不同类的示例，被创建的实例通常都具有共同的父类。
+- 定义：定义一个工厂类，它可以根据**参数**的不同返回不同类的示例，被创建的实例通常都具有共同的父类。
 
 ##### 简单工厂模式的结构
 
-简单工厂模式的结构比较简单，其核心是工厂类的设计，它包含以下3个角色：
+简单工厂模式的结构比较简单，其核心是工厂类的设计，它包含以下 3 个角色：
 
 - **Factory（工厂角色）**：简单工厂模式的核心，负责实现创建所有产品实例的内部逻辑，提供静态的工厂方法 factoryMethod()，它的返回类型为抽象产品类型 Product。
 - **Product（抽象产品角色）**：它是工厂类创建的所有对象的父类，封装了各种产品对象的共有方法
@@ -145,7 +145,195 @@ public class ChartClient {
 - 工厂类负责创建的对象较少，由于创建的对象较少，不会造成工厂方法中的业务逻辑太过复杂。
 - 客户端只知道传入工厂类的参数，对于如何创建对象并不需要关心。
 
+
+
 ### 工厂方法模式
+
+##### 工厂方法模式概述及定义
+
+- 概述：工厂方法模式是简单工厂模式的延伸，它继承了简单工厂模式的优点，同时弥补了它的缺陷，更好的复合开闭原则，在增加新的具体产品对象时不需要对已有系统做任何修改。
+
+- 定义：定义一个用于创建对象的接口，但是让子类决定将哪一个类实例化，工厂方法模式让一个类的实例化延迟到其子类。
+
+##### 工厂方法模式结构
+
+工厂方法模式提供一个抽象工厂接口来声明抽象工厂方法，而由其子类来具体实现工厂方法，创建具体的产品对象。工厂方法模式包含以下 4 个角色：
+
+- **Product（抽象产品**）：它是定义产品的接口，是工厂方法模式所创建对象的超类型，也就是产品对象的公共父类。
+- **ConcreteProduct（具体产品）**：它实现了抽象产品接口，某种类型的具体产品由专门的具体工厂创建，具体工厂和具体产品之间一一对应。
+- **Factory（抽象工厂）**：在抽象工厂类中声明了工厂方法（Factory Method），用于返回一个产品。**抽象工厂是工厂方法模式的核心**，所有创建对象的工厂类都必须实现该接口。
+- **ConcreteFactory（具体工厂）**：它是抽象工厂类的子类，实现了在抽象工厂中声明的工厂方法，并可由客户端调用，返回一个具体产品类的实例。
+
+##### 工厂方法模式实现
+
+实现情景：某系统运行日志记录器可以通过多种途径保存系统运行日志，例如通过文件记录或数据库记录，用户可以通过修改配置更换日志记录方式。日志记录器初始化参数设置较为复杂，而且某些参数的设置有严格的先后顺序，为了更好地封装记录器的初始化过程并保证多种记录器切换的灵活性，现采用工厂方法模式来设计该系统。
+
+- Logger 抽象产品角色
+
+```java
+/**
+ * 抽象日志接口，充当抽象产品角色
+ */
+public interface Logger {
+    void writeLog();
+}
+```
+
+- xxxLogger 具体产品角色
+
+```java
+/**
+ * 数据库日志记录器，充当具体产品角色
+ */
+public class DatabaseLogger implements Logger {
+    @Override
+    public void writeLog() {
+        System.out.println("数据库日志记录");
+    }
+}
+
+/**
+ * 文件日志记录器，充当具体产品角色
+ */
+public class FileLogger implements Logger {
+    @Override
+    public void writeLog() {
+        System.out.println("文件日志记录");
+    }
+}
+```
+
+- LoggerFactory 抽象工厂角色
+
+```java
+/**
+ * 日志记录器工厂接口，充当抽象工厂角色
+ */
+public interface LoggerFactory {
+    Logger createLogger();
+}
+```
+
+- xxxLoggerFactory  具体工厂角色
+
+```java
+/**
+ * 数据库日志记录器，充当具体工厂角色
+ */
+public class DatabaseLoggerFactory implements LoggerFactory {
+    @Override
+    public Logger createLogger() {
+        //连接数据库，代码省略
+        //创建数据库日志记录器对象
+        Logger databaseLogger = new DatabaseLogger();
+        //初始化数据库日志记录器对象
+        return databaseLogger;
+    }
+}
+
+/**
+ * 文件日志记录器，充当具体工厂角色
+ */
+public class FileLoggerFactory implements LoggerFactory {
+    @Override
+    public Logger createLogger() {
+        //创建文件日志记录器对象
+        Logger logger = new FileLogger();
+        //初始化文件日志记录器对象
+        return logger;
+    }
+}
+```
+
+- LoggerClient 测试客户端
+
+```java
+/**
+ * 客户端测试类
+ */
+public class LoggerClient {
+    public static void main(String[] args) {
+        LoggerFactory loggerFactory = null;
+        Logger logger = null;
+        //可引入配置文件和反射机制实现
+        loggerFactory = new DatabaseLoggerFactory();
+        logger = loggerFactory.createLogger();
+        logger.writeLog();
+    }
+}
+```
+
+注意：如果需要添加并使用心得日志记录器，只需要添加一个新的具体工厂类，然后在客户端代码中修改具体工厂类的类名，原有类库的代码不需要改变。
+
+**通过引入配置文件并使用反射机制可以实现在不修改任何客户端代码的基础上更换具体工厂类**。让系统更加符合开闭原则，具备更好的灵活性和可扩展性。
+
+##### 工厂方法的重载
+
+某些情况下，可以通过多种方式来初始化同一个产品类。例如前面提到的日志记录器类，可以为各种日志记录器提供默认实现，还可以为数据库日志记录器提供数据库连接字符串，为文件日志记录器提供文件路径；也可以将相关参数封装在一个 Object 类型的对象中，通过 Object 对象将配置参数传入工厂类。**此时可以提供一组重载的工厂方法，以不同的方法对产品对象进行创建。**
+
+- 抽象工厂类
+
+```java
+/**
+ * 日志记录器工厂接口，充当抽象工厂角色
+ */
+public interface LoggerFactory {
+    Logger createLogger();
+    Logger createLogger(String url);
+    Logger createLogger(Object obj);
+}
+```
+
+- 具体工厂类
+
+```java
+/**
+ * 数据库日志记录器，充当具体工厂角色
+ */
+public class DatabaseLoggerFactory implements LoggerFactory {
+    @Override
+    public Logger createLogger() {
+        //使用默认方式连接数据库，代码省略
+        Logger databaseLogger = new DatabaseLogger();
+        //初始化数据库日志记录器对象
+        return databaseLogger;
+    }
+    @Override
+    public Logger createLogger(String args) {
+        //使用 args 作为连接字符串来连接数据库，代码省略
+        Logger databaseLogger = new DatabaseLogger();
+        //初始化数据库日志记录器对象
+        return databaseLogger;
+    }
+    @Override
+    public Logger createLogger(Object obj) {
+        //使用封装在 obj 中的字符串来连接数据库，代码省略
+        Logger databaseLogger = new DatabaseLogger();
+        //使用封装在 obj 中数据来初始化数据库日志记录器对象
+        return databaseLogger;
+    }
+
+}
+```
+
+##### 工厂方法模式的优缺点
+
+优点：
+
+- 在工厂方法模式中，工厂方法用来创建客户端所需要的产品，同时还向客户隐藏了哪种具体产品类将被初始化这一细节，用户只需要知道所需产品对象的工厂类即可，无需关心创建细节。
+- 基于工厂角色和产品角色的多态性设计师工厂方法模式的关键。它能够让工厂自主确定创建何种产品对象，而如何创建这个对象的细节完全封装在具体工厂内部。
+- 系统中加入新产品时无需修改抽象工厂和抽象产品提供的接口，无需修改客户端，也无需修改其他具体工厂和具体产品，而只要添加一个具体工厂和具体产品即可，这样系统的可扩展性好，完全符合开闭原则。
+
+缺点：
+
+- 添加新产品时需要同时添加具体工厂类，使得系统中的类的个数成对增加，一定程度上增加了系统的复杂性，有更多的类需要编译和运行，给系统带来一些额外的开销。
+
+- 由于考虑到系统的可扩展性，需要引入抽象层，在客户端代码中均适用抽象层进行定义，增加了系统的抽象性和理解难度。
+
+##### 工厂方法模式的适应环境
+
+- 客户端不需要知道具体产品类的类名，只需要知道所对应的工厂即可，可以将具体工厂类的类名储存到配置文件或数据库中。
+- 抽象工厂类通过其子类来指定创建哪个对象。在工厂方法模式中，对于抽象工厂类只需要提供一个创建产品的接口，而由其子类来确定具体要创建的对象，利用面向对象的多态性和里氏代换原则，在程序运行时子类对象覆盖父类对象，从而使得系统更容易扩展。
 
 
 
