--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -532,15 +532,56 @@ public class SummerSkinFactory implements SkinFactory {
  */
 public class SkinClient {
     public static void main(String[] args) {
-        SkinFactory skinFactory = new SummerSkinFactory();
+        SkinFactory skinFactory = (SkinFactory) AbstractFactoryXmlUtil.getBean();
+        if (skinFactory != null) {
+            Button button = skinFactory.createButton();
+            TextField textField = skinFactory.createTextField();
+            ComboBox comboBox = skinFactory.createComboBox();
 
-        Button button = skinFactory.createButton();
-        TextField textField = skinFactory.createTextField();
-        ComboBox comboBox = skinFactory.createComboBox();
+            button.display();
+            textField.display();
+            comboBox.display();
+        }
+    }
+}
+```
 
-        button.display();
-        textField.display();
-        comboBox.display();
+- xml 配置文件
+
+```xml
+<?xml version="1.0" encoding="utf-8" ?>
+<!--抽象工厂模式的配置文件 xml-->
+<config>
+    <className>
+        com.piano.creation.abstract_factory.SummerSkinFactory
+    </className>
+</config>
+```
+
+- xml 解析工具类
+
+```java
+/**
+ * xml 工具类，用于获取 xml 配置的具体工厂类的对象
+ */
+class AbstractFactoryXmlUtil {
+    //该方法用于从 xml 配置文件中提取具体类的类名，并返回一个实例对象
+    static Object getBean() {
+        try {
+            //创建 DOM 文档对象
+            DocumentBuilderFactory builderFactory = new DocumentBuilderFactoryImpl();
+            DocumentBuilder documentBuilder = builderFactory.newDocumentBuilder();
+            Document document = documentBuilder.parse(new File("src\\com\\piano\\creation\\abstract_factory\\abstract_factory.xml"));
+
+            NodeList nodeList = document.getElementsByTagName("className");
+            Node item = nodeList.item(0).getFirstChild();
+            String className = item.getNodeValue();
+            //通过反射创建对象
+            return Class.forName(className.trim()).newInstance();
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
     }
 }
 ```
@@ -571,10 +612,333 @@ public class SkinClient {
 
 ### 建造者模式
 
+##### 建造者模式概述及定义
+
+- 概述：构造者模式将客户端与包含多个部件的复杂对象的创建过程分离，客户端无须知道复杂对象的内部组成部分和装配方式，只需要知道所需构造者的类型即可。建造者模式关注如何一步一步地创建一个复杂对象，不同的构造者定义了不同的创建过程。
+- 定义：讲一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表示。
+
+##### 建造者模式的结构
+
+建造者模式包含如下 4 个角色：
+
+- **Builder（抽象构造者）**：它为创建一个产品对象的各个部件指定抽象接口，在该接口中一般声明两类方法，一类方法是 buildPartX() ，它们用于创建复杂对象的各个部件；另一类方法是 getResult() ，它们用于返回复杂对象。Builder 既可以是抽象类，也可以是接口。
+- **ConcreteBuilder（具体构造者）**：它实现了 Builder 接口，实现各个部件的具体构造和装配方法，定义并明确所创建的复杂对象，还可以提供一个方法返回创建好的复杂产品对象（该方法也可以由抽象构造者实现）。
+- **Product（产品）**：它是被构建的复杂对象，包含多个组成部件，具体构造者创建该产品的内部表示并定义它的装配过程。
+- **Director（指挥者）**：指挥者又称为导演类，它负责安排复杂对象的构造次序，指挥者与抽象构造者直接存在关联关系，可以在其 construct() 构造方法中调用构造者对象的部件构造与装配方法，完成复杂对象的构造。客户端一般只需要与指挥者进行交互，在客户端确定具体构造者的类型，并实例化具体构造者对象（也可以通过配置文件和反射机制实现），然后通过指挥者类的构造函数或者 Setter 方法将该对象传入指挥者类。
+
+##### 建造者模式的实现
+
+实现场景：开发一款基于角色扮演的游戏，通过分析发现，游戏角色是一个复杂对象，它包含类型、性别、脸型、服装、发型等组成部分，不同类型的游戏角色的特性有所差异，例如“天使”拥有美丽的笑容和披肩的长发，“恶魔”极其丑陋，留着光头并穿一件刺眼的黑衣。无论哪种造型的角色，它的创建步骤都大同小异，都需要逐步创建其组成部分，再将各个组成部分装配成一个完整的游戏角色。
+
+- 游戏角色类，充当复杂产品
+
+```java
+/**
+ * 游戏角色类，充当负责产品对象
+ */
+public class Actor {
+    private String type; //角色类型
+    private String sex; //性别
+    private String face; //脸型
+    private String costume; //服装
+    private String hairstyle; //发型
+    //setter 和 getter方法省略
+    }
+```
+
+- 游戏角色构造者，充当抽象构造者
+
+```java
+/**
+ * 游戏角色构造者，充当抽象构造者
+ */
+public abstract class ActorBuilder {
+    protected Actor actor = new Actor();
+
+    abstract void buildType();
+    abstract void buildSex();
+    abstract void buildFace();
+    abstract void buildCostume();
+    abstract void buildHairstyle();
+
+    //工厂方法，返回一个完整的游戏角色对象
+    public Actor createActor() {
+        return this.actor;
+    }
+}
+```
+
+- 具体构造者
+
+```java
+/**
+ * 英雄角色构造者，充当具体构造者
+ */
+public class HeroActorBuilder extends ActorBuilder {
+    @Override
+    void buildType() {
+        actor.setType("英雄");
+    }
+    @Override
+    void buildSex() {
+        actor.setSex("难");
+    }
+    @Override
+    void buildFace() {
+        actor.setFace("英俊");
+    }
+    @Override
+    void buildCostume() {
+        actor.setCostume("盔甲");
+    }
+    @Override
+    void buildHairstyle() {
+        actor.setHairstyle("飘逸");
+    }
+}
+
+/**
+ * 天使角色构造者，充当具体构造者
+ */
+public class AngelActorBuilder extends ActorBuilder {
+    @Override
+    void buildType() {
+        actor.setType("天使");
+    }
+    @Override
+    void buildSex() {
+        actor.setSex("女");
+    }
+    @Override
+    void buildFace() {
+        actor.setFace("漂亮");
+    }
+    @Override
+    void buildCostume() {
+        actor.setCostume("白裙");
+    }
+    @Override
+    void buildHairstyle() {
+        actor.setHairstyle("披肩长发");
+    }
+}
+
+/**
+ * 恶魔角色构造者，充当具体构造者
+ */
+public class DevilActorBuilder extends ActorBuilder {
+    @Override
+    void buildType() {
+        actor.setType("恶魔");
+    }
+    @Override
+    void buildSex() {
+        actor.setSex("妖");
+    }
+    @Override
+    void buildFace() {
+        actor.setFace("丑陋");
+    }
+    @Override
+    void buildCostume() {
+        actor.setCostume("黑衣");
+    }
+    @Override
+    void buildHairstyle() {
+        actor.setHairstyle("光头");
+    }
+}
+```
+
+- 角色控制类，充当指挥者
+
+```java
+/**
+ * 角色控制器，充当指挥者
+ */
+public class ActorController {
+    //逐步构建复杂产品对象
+    public Actor construct(ActorBuilder actorBuilder) {
+        Actor actor = null;
+
+        actorBuilder.buildType();
+        actorBuilder.buildSex();
+        actorBuilder.buildFace();
+        actorBuilder.buildCostume();
+        actorBuilder.buildHairstyle();
+        actor = actorBuilder.createActor();
+        return actor;
+    }
+}
+```
+
+- 客户端测试类
+
+```java
+/**
+ * 游戏角色客户端测试类
+ */
+public class ActorClient {
+    public static void main(String[] args) {
+        Actor actor = null;
+        //反射生成具体构造者对象
+        ActorBuilder actorBuilder = (ActorBuilder) BuilderXmlUtil.getBean();
+
+        ActorController actorController = new ActorController();
+        //通过指挥者创建完整的构造者对象
+        actor = actorController.construct(actorBuilder);
+
+        System.out.println(actor);
+    }
+}
+```
+
+注意：配置文件和抽象工厂模式的一样，所以省略。当需要增加新的具体角色构造者时只需要将新增的具体角色构造者作为抽象角色构造者的子类，然后修改配置文件，既有代码不用变，符合开闭原则。
+
+##### 指挥者类的深入讨论
+
+- 省略 Director 指挥者这个角色
+
+  某些情况下，为了简化系统结构，可以将 Director 和 Builder 合并，在 Builder 中提供构造复杂对象的 construct() 方法，由于 Builder 通常为抽象类，因此可以将 construct() 方法定义为静态方法，以便客户端能够直接调用。此时 Builder 的代码如下：
+
+```java
+/**
+ * 游戏角色构造者，充当抽象构造者
+ */
+public abstract class ActorBuilder {
+    protected static Actor actor = new Actor();
+
+    public static Actor construct(ActorBuilder actorBuilder) {
+        actorBuilder.buildType();
+        actorBuilder.buildSex();
+        actorBuilder.buildFace();
+        actorBuilder.buildCostume();
+        actorBuilder.buildHairstyle();
+        return actor;
+    }
+}
+```
+
+- 钩子方法的引入
+
+  建造者模式除了可以逐步构建一个复杂产品对象外，还可以通过 Director 类更加精细地控制产品的创建过程，例如增加一类称为钩子方法（Hook Method）的特殊方法来控制是否对某个 buildPartX() 进行调用。**钩子方法的返回值通常是 Boolean 类型，方法名一般为 isXXX()** ，钩子方法定义在抽象构造者中。为了判断某个角色是否光头，在 ActorBuilder 为之提供一个默认实现，其返回值为 false
+
+```java
+/**
+ * 游戏角色构造者，充当抽象构造者
+ */
+public abstract class ActorBuilder {
+    protected Actor actor = new Actor();
+
+    abstract void buildType();
+    abstract void buildSex();
+    abstract void buildFace();
+    abstract void buildCostume();
+    abstract void buildHairstyle();
+
+    //钩子方法
+    public boolean isBareheaded() {
+        return false;
+    }
+    
+    //工厂方法，返回一个完整的游戏角色对象
+    public Actor createActor() {
+        return this.actor;
+    }
+}
+```
+
+- 覆盖钩子方法
+
+  假如“恶魔”角色无须构造头部部件，则对应的具体构造器 DevilActorBuilder 将覆盖 isBareheaded() 方法，并将返回值改为 true，相应的 ActorController 也要修改。代码如下：
+
+```java
+/**
+ * 恶魔角色构造者，充当具体构造者
+ */
+public class DevilActorBuilder extends ActorBuilder {
+    @Override
+    void buildType() {
+        actor.setType("恶魔");
+    }
+// .....
+    //覆盖钩子方法
+    @Override
+    public boolean isBareheaded() {
+        return true;
+    }
+}
+
+/**
+ * 角色控制器，充当指挥者
+ */
+public class ActorController {
+    //逐步构建复杂产品对象
+    public Actor construct(ActorBuilder actorBuilder) {
+        Actor actor = null;
+
+        actorBuilder.buildType();
+        actorBuilder.buildSex();
+        actorBuilder.buildFace();
+        actorBuilder.buildCostume();
+        //通过钩子方法来控制产品的构建
+        if (!actorBuilder.isBareheaded()) {
+            actorBuilder.buildHairstyle();
+        }
+        actor = actorBuilder.createActor();
+        return actor;
+    }
+}
+```
+
+##### 建造者模式的优缺点
+
+优点：
+
+- 在建造者模式中，客户端不必知道产品内部组成的细节，将产品本身与产品的创建过程解耦，使得同样的创建过程可以创建不同的产品。
+- 每一个具体构造者都相对独立，而与其他具体构造者无关，因此可以很方便地替换具体构造者或增加新的具体构造者。由于指挥者针对抽象构造者编程，增加新的具体构造者无须修改既有代码，系统扩展很方便。
+- 可以更加精细地控制产品的创建过程。将复杂产品的创建步骤分解在不同的方法中，使得创建过程更加清晰，也更方便使用程序来控制创建过程。
+
+缺点：
+
+- 建造者模式所创建的产品一般具有较多的共同点，其组成部分相似，如果产品之间的差异性很大，则不太适用，例如很多组成部分不同，不适用建造者模式。
+- 如果系统内部变化复杂，可能会导致需要定义很多具体构造者来实现这种变化，导致系统变得很庞大，增加系统的理解难度和运行成本。
+
+##### 建造者模式的适用环境
+
+- 需要生成的产品对象有复杂的内部结构，这些产品通常包含多个成员变量。
+- 需要生成的产品对象的属性相互依赖，需要指定其生成的顺序。
+- 对象的创建过程独立于创建该对象的类，在构造者模式中通过引入指挥类将创建过程封装在指挥者类中，而不在建造者类中和客户端中。
+- 隔离复杂对象的创建和使用，并使得相同的创建过程可以创建不同的产品。
+
+### 原型模式
+
+##### 原型模式的概述及定义
+
+
+
+##### 原型模式的结构
+
+
+
+##### 理解浅克隆和深克隆
+
+
+
+##### 原型模式的实现
+
+
+
+##### 原型管理器
+
+
+
+##### 原型模式的优缺点
+
+
+
+##### 原型模式的适用环境
+
 
 
 ### 单例模式
-
-
-
-### 原型模式
