--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -915,29 +915,159 @@ public class ActorController {
 
 ##### 原型模式的概述及定义
 
-
+- 概述：将一个原型对象传给要发动创建的对象（即客户端对象），这个要发动创建的对象通过请求原型对象复制自己来实现创建过程。创建新对象（也称为克隆对象）的工厂就是原型类自身，工厂方法由负责复制原型对象的克隆方法来实现，**克隆方法创建的对象是一个全新的对象，它们在内存中拥有新的地址，通常对克隆所产生的对象进行修改不会对原型对象造成任何影响，每一个克隆对象都是相互独立的。**
+- 定义：使用原型实例指定待创建对象的类型，并且通过复制这个原型来创建新的对象。
 
 ##### 原型模式的结构
 
+原型模式包含以下 3 个角色：
 
+- **Prototype（原型抽象类）**：它是声明克隆方法的接口，是所有具体原型类的公共父类，它可以是抽象类也可以是接口，甚至可以是具体的实现类。
+- **ConcretePrototype（具体抽象类）**：它实现在抽象原型类中声明的克隆方法，在克隆方法中返回自己的一个克隆对象。
+- **Client（客户端）**：在客户端类中，让一个原型对象克隆自身从而创建一个新的对象，只需要直接实例化或通过工厂方法等方式创建一个原型对象，再通过调用该对象的克隆方法即可得到多个相同的对象。由于客户端针对抽象原型类编程，因此用户可以根据需要选择具体原型类。
 
 ##### 理解浅克隆和深克隆
 
+根据在复制原型对象的同时是否复制包含在原型对象中引用类型的成员变量，原型模式的克隆机制分为两种，即浅克隆（Shadow Clone）和深克隆（Deep Clone）。
 
+- 浅克隆：当原型对象被复制时只复制它本身和其中包含的值类型的成员变量，而引用类型（如类，接口，数组等复杂数据类型）的成员变量并没有复制，原型对象和克隆对象的引用类型的成员变量指向相同的内存地址。**对象可以通过实现一个标识接口 Cloneable，然后调用公共对象 Object 的 clone() 方法来实现浅克隆。**
+- 深克隆：无论原型对象的成员变量是值类型还是引用类型，都将复制一份给克隆对象。**可以通过序列化（Serialization）等方式来实现深克隆。序列化就是将对象写到流的过程，写到流的对象是原有对象的一个复制，而原有对象仍然存在与内存中。能够实现序列化的对象其类必须实现 Serializable 接口。**
 
 ##### 原型模式的实现
 
+实现场景：在使用某 OA 系统，员工发现他们每周的工作周报很多内容都是重复的，为了提高效率，大家迫切希望有一种机制能够快速创建相同或者相似的周报，包括创建周报的附件。
 
+- 附件类
+
+```java
+/**
+ * 附件类
+ */
+public class Attachment implements Serializable {
+    private String name;
+    public String getName() {
+        return name;
+    }
+    public void setName(String name) {
+        this.name = name;
+    }
+}
+```
+
+- 工作周报类，充当原型角色
+
+```java
+/**
+ * 工作周报类，充当原型角色，浅克隆方式
+ */
+public class WeeklyLog implements Serializable, Cloneable {
+    private String name; //周报名称
+    private String date; //提交日期
+    private String content; //内容
+    private Attachment attachment; //附件
+	//省略 getter和setter方法
+    
+    //深克隆方法
+    public WeeklyLog deepClone() throws IOException, ClassNotFoundException {
+
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+        ObjectOutputStream objectOutputStream = new ObjectOutputStream(outputStream);
+        objectOutputStream.writeObject(this);
+
+        ByteArrayInputStream arrayInputStream = new ByteArrayInputStream(outputStream.toByteArray());
+        ObjectInputStream objectInputStream = new ObjectInputStream(arrayInputStream);
+        Object object = objectInputStream.readObject();
+
+        return (WeeklyLog) object;
+    }
+    //浅克隆方法
+    @Override
+    public WeeklyLog clone() {
+        WeeklyLog weeklyLog = null;
+        try {
+            weeklyLog = (WeeklyLog) super.clone();
+        } catch (CloneNotSupportedException e) {
+            e.printStackTrace();
+        }
+        return weeklyLog;
+    }
+}
+```
+
+- 客户端测试类
+
+```java
+/**
+ * 原型模式测试客户端
+ */
+public class WeeklyLogClient {
+    public static void main(String[] args) throws Exception{
+        //创建附件对象
+        Attachment attachment = new Attachment();
+        //创建原型对象
+        WeeklyLog weeklyLog = new WeeklyLog();
+        weeklyLog.setAttachment(attachment);
+        //浅克隆的新对象
+        WeeklyLog cloneWeeklyLog = weeklyLog.clone();
+
+        System.out.println("浅克隆周报是否相同："+(weeklyLog==cloneWeeklyLog));
+        System.out.println("浅克隆附件是否相同："+(weeklyLog.getAttachment()==cloneWeeklyLog.getAttachment()));
+
+        //深克隆的新对象
+        WeeklyLog deepClone = weeklyLog.deepClone();
+        System.out.println("深克隆周报是否相同："+(weeklyLog==deepClone));
+        System.out.println("深克隆附件是否相同："+(weeklyLog.getAttachment()==deepClone.getAttachment()));
+    }
+}
+```
 
 ##### 原型管理器
 
+原型管理器（Prototype Manager）将多个原型对象存储在一个集合中供客户端使用，它是一个专门负责克隆对象的工厂，其中定义了一个集合用于存储原型对象，如果需要某个原型对象的一个克隆，可以通过复制集合中对应的原型对象来获得。在原型管理器中针对抽象原型类进行编程，以便扩展。**原型管理器一般设置成单例类。**
 
+```java
+/**
+ * 原型管理器，这个类一般设置成单例类
+ */
+public class PrototypeManager {
+    //使用 Hashtable 存储原型对象
+    private Hashtable prototypeTable = new Hashtable();
+    
+    public PrototypeManager() {
+        prototypeTable.put("A", new Attachment());
+        prototypeTable.put("B", new WeeklyLog());
+    }
+    
+    public void add(String key, Prototype prototype) {
+        prototypeTable.put(key, prototype);
+    }
+    
+    public Prototype get(String key) {
+        Prototype prototype = null;
+        prototype = ((Prototype) prototypeTable.get(key)).clone();
+        return prototype;
+    }
+}
+```
 
 ##### 原型模式的优缺点
 
+优点：
 
+- 当创建新的对象实例较为复杂时，通过原型模式复制一个已有实例可以提高新实例的创建效率。
+- 原型模式简化了创建结构，原型模式中产品的复制是通过封装在原型类中的克隆方法实现的，无须专门的工厂类来创建产品。
+- 可以使用深克隆的方式保存对象的状态，使用原型模式将对象复制一份并将其状态保存起来，以便在需要的时候使用（例如恢复到某一历史状态），可辅助实现撤销操作。
+
+缺点：
+
+- 需要为每一个类配备一个克隆方法，而且该克隆方法位于一个类的内部，当对已有的类进行改造时需要修改源代码，违背了开闭原则。
+- 在实现深克隆时需要编写较为复杂的代码，而且当对象之间存在多重的嵌套引用时，为了实现深克隆，每一层对象对应的类都必须支持深克隆，实现可能会比较麻烦。
 
 ##### 原型模式的适用环境
+
+- 创建新对象成本较大，新对象可以用过复制已有对象来获得，如果是相似对象，则可以对其成员变量稍作修改。
+- 系统要保存对象的状态，而对象的状态的变化很小。
+- 需要避免使用分层次的工厂类来创建分层次的对象，并且类的实例对象只有一个或很少的几个组合状态，通过复制原型对象得到新实例可能比使用构造器函数创建一个新实例更加方便。
 
 
 
