--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -1072,3 +1072,157 @@ public class PrototypeManager {
 
 
 ### 单例模式
+
+##### 单例模式的概述及定义
+
+- 概述：单例模式是结构最简单的一个设计模式，在它的核心结构中只包含一个被称为单例类的特殊类。通过单例模式可以确保系统中的一个类只有一个实例而且该实例易于被外界访问，从而方便对实例个数进行控制，节约系统资源。
+- 定义：定义一个类只有一个实例，并提供一个**全局访问**点来访问这个唯一的实例。单例模式有三个要点：
+  - **某个类只能有一个实例；**
+  - **它必须自行创建这个实例；**
+  - **它必须自行向整个系统提供这个实例；**
+
+##### 单例模式的结构
+
+单例模式只包含一个单例角色，也就是 Singleton。
+
+对于 Singleton，在其内部创建它的唯一实例，并通过静态方法 getInstance() 让客户端可以使用它的唯一实例；为了防止在外部对单例类实例化，将其构造器函数的可见性设为 private，在单例类内部定义了一个 Singleton 类型的静态对象作为供外部共享访问的唯一实例。
+
+##### 单例模式的实现
+
+- 最简单的实现方案（线程不安全）
+
+```java
+/**
+ * 最简单的单例模式(线程不安全)
+ */
+public class SimpleSingleton {
+    private static SimpleSingleton singleton = null;
+
+    private SimpleSingleton() {
+    }
+    public static SimpleSingleton getInstance() {
+        if (singleton == null) {
+            singleton = new SimpleSingleton();
+        }
+        return singleton;
+    }
+}
+```
+
+##### 饿汉式单例与懒汉式单例
+
+- **饿汉式单例（线程安全）**，当类被加载时，静态变量 singleton 会被初始化，此时类的私有构造函数会被调用，单例类的唯一实例将被创建。
+
+```java
+/**
+ * 饿汉式单例，线程安全
+ */
+public class EagerSingleton {
+    private static final EagerSingleton singleton = new EagerSingleton();
+
+    private EagerSingleton() {
+    }
+
+    public static EagerSingleton getInstance() {
+        return singleton;
+    }
+}
+```
+
+- **懒汉式单例（线程安全）**
+
+与饿汉式单例类相同的是，懒汉式单例类（Lazy Singleton）的构造函数也是私有的。与饿汉式单例类不同的是，懒汉式单例类在第一次被引用时将自己实例化，在懒汉式单例类被加载时不会被初始化，因为锁定了整个方法，代码效率不是很高。
+
+```java
+/**
+ * 懒汉式单例类，锁定方法
+ */
+public class LazySingleton {
+    private static LazySingleton singleton = null;
+    private LazySingleton() {
+        
+    }
+    // synchronized 关键字锁定方法
+    public synchronized static LazySingleton getInstance() {
+        if (singleton == null) {
+            singleton = new LazySingleton();
+        }
+        return singleton;
+    }
+}
+```
+
+- **双重检查锁定的懒汉式单例（线程安全）**，静态变量必须加 volatile 关键字修饰，使多个线程之间的内存可见，通过锁定代码块的方式，提高了代码的执行效率。
+
+```java
+/**
+ * 双重检查锁定的单例类
+ */
+public class DoubleCheckSingleton {
+    //必须加 volatile 关键字，使多个线程之间的内存可见
+    private static volatile DoubleCheckSingleton singleton = null;
+
+    private DoubleCheckSingleton() {
+    }
+
+    //双重检查锁定
+    public static DoubleCheckSingleton getInstance() {
+        if (singleton == null) {
+            //锁定代码块
+            synchronized (DoubleCheckSingleton.class) {
+                if (singleton == null) {
+                    singleton = new DoubleCheckSingleton();
+                }
+            }
+        }
+        return singleton;
+    }
+}
+```
+
+- 饿汉式单例类和懒汉式单例类的比较
+
+饿汉式单例类在类加载时就将自己实例化，它的优点在于考虑多个线程同时访问的问题，可以确保实例的唯一性；从调用速度和反应时间角度来讲，由于单例对象一开始就得以创建，因此要优于懒汉式；但是无论系统在运行时是否需要使用该单例对象，由于在类加载时该对象就需要创建，因此从资源利用效率角度来讲饿汉式不如懒汉式。
+
+- 静态内部类实现单例模式
+
+  饿汉式单例类不能实现延迟加载，不管将来用不用始终占据内存；懒汉式单例类线程安全控制烦琐，而且性能受影响。可见，无论是饿汉式还是懒汉式都存在一些问题。为了克服这些问题，**在 Java 语言中可以通过 Initialization on Demand Holder 技术来实现单例模式。**使用内部类的方式既可以实现延迟加载，又可以保证线程安全，不影响系统性能。
+
+```java
+/**
+ * 静态内部类实现单例模式
+ */
+public class StaticInnerSingleton {
+    private StaticInnerSingleton() {
+    }
+
+    //静态内部类
+    private static class InnerSingleton {
+        private static final StaticInnerSingleton singleton = new StaticInnerSingleton();
+    }
+
+    public StaticInnerSingleton getInstance() {
+        return InnerSingleton.singleton;
+    }
+}
+```
+
+##### 单例模式的优缺点
+
+优点：
+
+- 单例模式提供了对唯一实例的受控访问，因为单例类封装了它的唯一实例，所以它可以严格控制客户怎样以及何时访问它。
+- 由于在系统中只存在一个对象，因此可以节约系统资源，对于一些需要频繁创建和销毁的对象，单例模式无疑提高系统的性能。
+- 允许可变数目的实例。基于单例模式可以进行扩展，使用与控制单例对象相似的方法来获得指定个数的实例对象，既节省系统资源，又解决了由于单例对象共享过多有损性能的问题。（注：自行提供指定数目实例对象的类可称为多例类）
+
+缺点：
+
+- 由于单例模式中没有抽象层，因此单例类的扩展有很大的困难。
+- 单例类的职责过重，在一定程度上违背了单一职责原则。因为单例类既提供了业务方法，又提供了创建对象的方法。将对象的创建和对象本身的功能耦合在一起。
+- 因为存在垃圾回收机制，因此如果实例化的共享对象长时间不被利用，系统会认为它是垃圾，会自动销毁并回收资源，下次利用时又将重新实例化，这将导致共享的单例对象状态的丢失。
+
+##### 单例模式的适用环境
+
+- 系统只需要一个实例对象，例如系统要求提供一个唯一的序列号生成器或资源管理器，或者因为资源消耗太大只允许创建一个对象。
+- 客户调用类的单个实例只允许使用一个公共访问点，除了该公共访问点，不能通过其他途径访问该实例。
+
