设计模式概述

--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -1,8 +1,66 @@
 ### 设计模式概述
 
+##### 设计模式的前世今生
 
+模式（pattern）起源于建筑业，后来被“四人组” GoF 引入到软件工程领域中，1990 年，“四人组”开始着手进行设计模式的分类整理工作。1995 年，“四人组”出版了《设计模式：可复用面向对象软件的基础》，此书也成为了设计模式的经典书籍，狭义上的设计模式就是指该书中描述的 23 种经典设计模式。
+
+##### 设计模式的概述及定义
+
+概述：设计模式（design pattern）是一套被反复使用的、多数人知晓的、经过分类编目的、代码设计经验的总结，使用设模式是为了可重用代码、让代码更容易被他人理解并且提高代码的可靠性。设计模式是一种用于对软件系统中不断出现的设计问题的解决方案进行文档化的技术，也是一种共享专家设计经验的技术。
+
+定义：**设计模式是在特定环境下为解决某一通用软件设计问题提供的一套定制的解决方案，该方案描述了对象和类之间的相互作用。**
+
+##### 设计模式的分类
+
+- 根据目的分类
+  - 创建型（Creational）：用于创建对象，5 种
+  - 结构型（Structural）：用于处理类或对象的组合，7 种
+  - 行为型（Behavioral）：用于描述类或对象怎样交互和怎样分配职责，11 种
+- 根据范围分类
+  - 类模式：处理类和子类之间的关系，这些关系通过继承建立，在编译时就被确定下来，是一种静态关系。
+  - 对象模式：处理对象间的关系，这些关系在运行时变化，更具动态性。
+
+##### 设计模式的优点
+
+- 设计模式融合了众多专家的经验，并以一种标准的形式供广大开发人员所用，它提供了一套通用的设计动词和一种通用的语言以方便开发人员之间沟通和交流，使得设计方案更加通俗易懂。
+- 设计模式使人们可以更加简单、方便地复用成功的设计和体系结构，将已证实的技术表述成设计模式也会使新系统开发者更加容易理解其设计思路。
+- 设计模式使得设计方案更加灵活，且易于修改。在很多设计模式中广泛使用了开闭原则和依赖倒转原则、迪米特法则等面向对象设计原则，使得系统具有较好的可维护性，真正实现可维护性的复用。
+- 设计模式的使用将提高软件系统的开发效率和软件质量，并且在一定程度上节约设计成本。
+- 设计模式有助于初学者更深入地理解面向对象思想，一方面可以帮助初学者更加方便阅读和学习现有类库与其他系统中的源代码，另一方面还可以提高软件的设计水平和代码质量。
 
 ### 面向对象设计原则
+
+##### 面向对象设计原则概述
+
+
+
+##### 单一职责原则
+
+
+
+##### 开闭原则
+
+
+
+##### 里氏代换原则
+
+
+
+##### 依赖倒转原则
+
+
+
+##### 接口隔离原则
+
+
+
+##### 合成复用原则
+
+
+
+##### 迪米特法则
+
+
 
 
 
