适配器模式

--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -28,39 +28,43 @@
 - 设计模式的使用将提高软件系统的开发效率和软件质量，并且在一定程度上节约设计成本。
 - 设计模式有助于初学者更深入地理解面向对象思想，一方面可以帮助初学者更加方便阅读和学习现有类库与其他系统中的源代码，另一方面还可以提高软件的设计水平和代码质量。
 
-### 面向对象设计原则
+
+
+### 七个面向对象设计原则
 
 ##### 面向对象设计原则概述
 
-
+软件的可维护性（Maintainability）和可复用性（reusability）是两个非常重要的用于衡量软件质量的属性，软件的可维护性是指软件能够被理解、修正、适用及扩展的难易程度，软件的可复用性是指软件能够被重复使用的难易程度。**面向对象设计原则的目标之一就是实现可维护性复用。**
 
 ##### 单一职责原则
 
-
+**一个对象应该只包含单一的职责，并且该职责被完整地封装在一个类中。**一个类承担的职责越多，它被复用的可能性就越小，而且一个类承担的职责过多，相当于将这些职责耦合在一起，当其中一个职责变化时可能会影响其他职责的运作。单一职责原则是实现高内聚、低耦合的指导方针。
 
 ##### 开闭原则
 
-
+**软件实体应当对扩展开放、对修改关闭。**开闭原则就是指软件实体应尽量在不修改原有代码的情况下进行扩展。为了满足这一原则，需要对系统进行抽象化设计，抽象化是开闭原则的关键。在很多面向对象编程语言中提供了接口、抽象类等机制，可以通过它们定义系统的抽象层，再通过具体类来进行扩展。如果需要修改系统的行为，无须对抽象层进行任何改动，只需要增加新的具体类来实现新的业务功能即可。
 
 ##### 里氏代换原则
 
-
+**所有引用基类的地方必须能透明地使用其子类的对象。**在软件中将一个基类对象替换成它的子类对象，程序将不会产生任何错误和异常，在运用里氏代换原则时应该将父类设计成抽象类或接口，让子类继承父类或实现父接口，并实现在父类中声明的方法，在运行时子类实例替换父类实例，可以很方便地扩展系统的功能，无须修改原有子类的代码，增加新的功能可以通过增加新的子类来实现。
 
 ##### 依赖倒转原则
 
+**高层模块不应该依赖低层模块，它们都应该依赖抽象。抽象不应该依赖于细节，细节应该依赖于抽象。**依赖倒转原则要求针对接口编程，不要针对实现编程。依赖倒转原则要求在程序代码中传递参数时或在关联关系中尽量引用层次高的抽象层类，即使用接口或抽象类进行变量类型声明、参数类型声明、方法返回类型声明，以及数据类型的转换等，而不是具体类来做这些事情。
 
+**==在大多数情况下，开闭原则、里氏代换原则和依赖倒转原则会同时出现，开闭原则是目标，里氏代换原则是基础，依赖倒转原则是手段，它们相辅相成，相互补充，目标一致，只是分析问题时所站的角度不同而已。==**
 
 ##### 接口隔离原则
 
-
+**客户端不应该依赖那些它不需要的接口。**当一个接口太大时需要将它分割成一些更细小的接口，使用该接口的客户端仅需要知道与之相关的方法即可。同时，需要注意接口的粒度，**接口太小会导致系统中接口泛滥，不利于维护；接口太大将会违背接口隔离原则，灵活性差，使用起来很不方便。**
 
 ##### 合成复用原则
 
-
+**优先使用对象组合，而不是通过继承来达到复用的目的。**合成复用原则就是在一个新的对象里通过关联关系（包括组合关系和聚合关系）来使用一些已有的对象，使之成为新对象的一部分，新对象通过委派调用已有对象的方法达到复用功能的目的。一般而言，如果两个类之间是“Has-A”的关系应使用组合或聚合，如果是“Is-A”的关系可以使用继承。“Is-A”意思是一个类是另一个类的“一种”，而“Has-A”则不同，它表示某一个角色具有某一项责任。
 
 ##### 迪米特法则
 
-
+**每一个软件单位对其他单位都只有最少的知识，而且局限于那些与本单位密切相关的软件单位。**迪米特法则要求一个软件实体尽可能少地与其他实体发生相互作用。如果一个系统符合迪米特法则，那么当其中的某一个模块发生修改时就会尽量少地影响其他模块，扩展会相对容易，这是对软件实体之间通信的限制，迪米特法则要求限制软件实体之间通信的宽度和深度。应用迪米特法则可降低系统的耦合度，使类与类之间保持松散的耦合关系。
 
 
 
@@ -668,6 +672,8 @@ class AbstractFactoryXmlUtil {
 - 系统中有多于一个产品族，而每次只使用其中一个产品族。可以通过配置文件等方式来使用户能够动态改变产品族，也可以很方便增加新的产品族。
 - 产品等级结构稳定，在设计完成之后不会向系统增加新的产品等级结构或者删除已有的产品等级结构。
 
+
+
 ### 建造者模式
 
 ##### 建造者模式概述及定义
@@ -968,6 +974,8 @@ public class ActorController {
 - 需要生成的产品对象的属性相互依赖，需要指定其生成的顺序。
 - 对象的创建过程独立于创建该对象的类，在构造者模式中通过引入指挥类将创建过程封装在指挥者类中，而不在建造者类中和客户端中。
 - 隔离复杂对象的创建和使用，并使得相同的创建过程可以创建不同的产品。
+
+
 
 ### 原型模式
 
@@ -1283,4 +1291,276 @@ public class StaticInnerSingleton {
 
 - 系统只需要一个实例对象，例如系统要求提供一个唯一的序列号生成器或资源管理器，或者因为资源消耗太大只允许创建一个对象。
 - 客户调用类的单个实例只允许使用一个公共访问点，除了该公共访问点，不能通过其他途径访问该实例。
+
+### 适配器模式
+
+##### 结构型模式
+
+结构型模式可以分为**类结构型模式**和**对象结构型模式**。类结构型模式关心类的组合，由多个类可以组合成一个更大的系统，在类结构型模式中一般只存在继承关系和实现关系；而对象结构型模式关心类与对象的组合，通过关联关系在一个类中定义另一个类的实例对象，然后通过该对象调用相应的方法，根据合成复用原则，在系统中尽量使用关联关系来替代继承关系，因此一部分结构型模式都是对象结构型模式。
+
+##### 适配器模式的概述及定义
+
+- 概述：适配器模式引入了一个被称为适配器（Adapter）的包装类，而它所包装的对象称为适配者（Adaptee），即被适配的类。适配器的实现就是把客户端的请求转化为对适配者的相关接口的调用。也就是说，当客户端调用**适配器的方法**时在适配器类的内部将调用**适配者类的方法**。
+- 定义：**将一个类的接口转换成客户希望的另一个接口。适配器模式让那些接口不兼容的类可以一起工作。**
+
+##### 适配器模式的结构
+
+适配器模式包含以下 3 个角色：
+
+- **Target（目标抽象类）**：目标抽象类定义客户所属的接口，可以是一个抽象类或接口，也可以是具体类。在类适配器中，由于 Java 不支持多重继承，它只能是接口。
+- **Adapter（适配器类）**：它可以调用另一个接口，作为一个转化器，对 Adaptee 和 Target 进行适配。适配器 Adapter 是适配器模式的核心，在类适配器中，它通过**实现 Target 接口并继承 Adaptee 类**来使两者产生联系；在对象适配器中，它通过**继承 Target 并关联一个 Adaptee 对**象使二者产生联系。
+- **Adaptee（适配者类）**：适配者即被适配的角色，它定义了一个已经存在的接口，这个接口需要适配，适配者类一般是具体类，包含了客户希望使用的业务方法，在某些情况下甚至没有适配者类的源代码。
+
+适配器模式可以将一个类的接口和另一个类的接口匹配起来，使用的前提是不能或不想修改适配者接口和抽象目标类接口。适配器模式更多的是强调对代码的组织，而不是功能的实现。
+
+##### 适配器模式的实现
+
+实现场景：开发一款儿童玩具汽车，该玩具汽车在移动过程中伴随着灯光闪烁和声音提示。以往的产品已经实现了控制灯光闪烁和声音提示的程序，为了重用先前的代码并且使汽车控制软件具有更好的灵活性和扩展性，现使用适配器模式设计该玩具汽车控制软件。
+
+- 目标抽象类
+
+```java
+/**
+ * 汽车控制类，充当目标抽象类
+ */
+public abstract class CarController {
+    public void move() {
+        System.out.println("玩具汽车移动");
+    }
+    //发出声音
+    abstract void phonate();
+    //灯光闪烁
+    abstract void twinkle();
+}
+```
+
+- 适配者
+
+```java
+/**
+ * 警笛类，充当适配者
+ */
+public class PoliceSound {
+    public void alarmSound() {
+        System.out.println("发出警笛声音");
+    }
+}
+
+/**
+ * 警灯类，充当适配者
+ */
+public class PoliceLamp {
+    public void alarmLamp() {
+        System.out.println("呈现警灯闪烁");
+    }
+}
+```
+
+- 适配器类
+
+```java
+/**
+ * 警车适配器，充当适配器
+ */
+public class PoliceCarAdapter extends CarController{
+
+    //定义适配者 PoliceSound 对象
+    private PoliceSound policeSound;
+    //定义适配者 PoliceLamp 对象
+    private PoliceLamp policeLamp;
+
+    public PoliceCarAdapter() {
+        this.policeSound = new PoliceSound();
+        this.policeLamp = new PoliceLamp();
+    }
+
+    //发出警笛声音
+    @Override
+    void phonate() {
+        //调用适配者类 PoliceSound 的方法
+        policeSound.alarmSound();
+    }
+
+    //呈现警灯闪烁
+    @Override
+    void twinkle() {
+        //调用适配者类 PoliceLamp 的方法
+        policeLamp.alarmLamp();
+    }
+}
+```
+
+- 客户端测试类
+
+```java
+/**
+ * 适配器客户端测试类
+ */
+public class AdapterClient {
+    public static void main(String[] args) {
+        CarController carController = new PoliceCarAdapter();
+
+        carController.move();
+        carController.phonate();
+        carController.twinkle();
+    }
+}
+```
+
+总结：本实例中目标抽象类是一个抽象类，而不是接口，并且实例中的适配器类 PoliceCarAdapter 同时适配了两个适配者，由于 Java 语言不支持多重类继承，因此本实例只能通过对象适配器来实现，而不能用类适配器。也可以参考前面的设计模式引入配置文件，并且通过反射机制获得适配器对象，那样如果需要使用其他声音类或灯光类，可以增加一个新的适配器类，使用新的适配器类来适配新的声音类或灯光类，原有代码无须改变。
+
+##### 缺省适配器模式
+
+**缺省适配器模式定义（Default Adapter Pattern）**：当不需要实现一个接口提供的所有方法时，可先设计一个抽象类实现该接口，并为接口中的每个方法提供一个默认实现（空方法），那么该抽象类的子类可以选择性地覆盖父类的某些方法来实现需求，它适用于不想使用一个接口中的所有方法的情况，又称为单接口适配器模式。
+
+缺省适配器模式包含以下 3 个角色：
+
+- **ServiceInterface（适配者接口）**：通常在该接口中声明了大量的方法。
+- **AbstractServiceClass（缺省适配器类）**：它是缺省适配器模式的核心类，使用空方法的形式实现了在 ServiceInterface 接口中声明的方法。通常将它定义为抽象类，因为对它进行实例化没有意义。、
+- **ConcreteServiceClass（具体业务类）**：它是缺省适配器类的子类，可以根据需要有选择性地覆盖在适配器类中定义的方法。
+
+```java
+/** 
+ * 适配者接口
+ */
+public interface ServiceInterface {
+
+    //定义了许多方法
+    void serviceMethod(); 
+    void serviceMethod2(); 
+    void serviceMethod3(); 
+}
+
+/**
+ * 缺省适配器类，实现接口，但是只是空方法
+ */
+public class AbstractServiceClass implements ServiceInterface {
+    @Override
+    public void serviceMethod() {
+
+    }
+
+    @Override
+    public void serviceMethod2() {
+
+    }
+
+    @Override
+    public void serviceMethod3() {
+
+    }
+}
+
+/**
+ * 具体业务类
+ */
+public class ConcreteServiceClass extends AbstractServiceClass {
+
+    @Override
+    public void serviceMethod() {
+        System.out.println(" 有选择覆盖 serviceMethod ");
+    }
+}
+```
+
+
+
+##### 双向适配器
+
+在对象适配器模式的使用过程中，如果在适配器中同时包含了对目标类和适配者的引用，适配者可以通过它调用目标类中的方法，目标类也可以通过它调用适配者类中的方法，那么该适配器就是一个双向适配器。
+
+##### 适配器模式的优缺点
+
+优点：
+
+- 将目标类和适配者类解耦，通过引入一个适配器类来重用现有的适配者类，无须修改原有结构。
+- 增加了类的透明性和复用性，将具体的业务实现过程封装在适配者类，对于客户端而言是透明的，而且提高了适配者的复用性，同一个适配者类可以在多个不同的系统中复用。
+- 灵活性和可扩展性都非常好，通过使用配置文件可以很方便地更换适配器，也可以在不修改原有代码的基础上增加新的适配器类，符合开闭原则。
+- 对于类适配器模式：
+  - 由于适配器是适配者的子类，因此可以在适配器类置换一些适配者的方法，使得适配器的灵活性更强。
+- 对于对象适配器：
+  - 一个对象适配器可以把多个不同的适配者适配到同一个目标。
+  - 可以适配一个适配者的子类，由于适配器和适配者是关联关系，根据里氏代换原则，适配者的子类也可通过该适配器进行适配。
+
+缺点： 
+
+- 对于类适配器：
+  - 对于 Java 而言，它不支持多重继承，目标抽象类只能是接口，并且一次只能适配一个适配者。
+  - 适配者类不能为 final 修饰的类。
+
+- 对于对象适配器：
+  - 要在适配器中置换适配者类的某些方法比较麻烦。如果一定要置换掉适配者类的一个或多个方法，可以先做一个适配者类的子类，将适配者类的方法置换掉，然后再把适配者类的子类当成真正的适配者进行适配，实现过程较为复杂。
+
+##### 适配器模式的适用环境
+
+- 系统需要使用一些现有的类，而这些类的接口（例如方法名）不符合系统的需要，甚至没有这些类的源代码。
+- 想创建一个可以重复使用的类，用于和彼此之间没有太大关联的类（包含一些可能在将来引进的类）一起工作。
+
+
+
+### 桥接模式
+
+
+
+### 组合模式
+
+
+
+### 装饰模式
+
+
+
+### 外观模式
+
+
+
+### 享元模式
+
+
+
+### 代理模式
+
+
+
+### 职责链模式
+
+
+
+### 命令模式
+
+
+
+### 解释器模式
+
+
+
+### 迭代器模式
+
+
+
+### 终结者模式
+
+
+
+### 备忘录模式
+
+
+
+### 观察者模式
+
+
+
+### 状态模式
+
+
+
+### 策略模式
+
+
+
+### 模板方法模式
+
+
+
+### 访问者模式
 
