--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -1500,6 +1500,328 @@ public class ConcreteServiceClass extends AbstractServiceClass {
 
 ### 桥接模式
 
+##### 桥接模式的概述及定义
+
+- 概述：桥接模式是一种对象结构型模式，它用一种巧妙的方式处理多层继承存在的问题，**用抽象关联取代了传统的多层继承，将类之间的静态继承关系转换成动态的对象组合关系**，使得系统更加灵活，并易于扩展，同时有效地控制了系统中类的个数。
+- 定义：将抽象部分与它的实现部分解耦，使得两者都能够独立变化。
+
+##### 桥接模式的结构
+
+桥接模式包含以下 4 个角色：
+
+- **Abstraction（抽象类）**：通常是抽象类而不是接口，其定义了一个 Implementor（实现类接口）类型的对象并可以维护该对象，它与 Implementor 具有关联关系，它既可以包含抽象业务方法，也可以已包含具体业务方法。
+- **RefinedAbstraction（扩充抽象类）**：它扩充了由 Abstraction 定义的接口，通常情况下不再是抽象类而是具体类，实现了在 Abstraction  中声明的抽象业务方法，在 RefinedAbstraction 中可以调用在 Implementor 中定义的业务方法。
+- **Implementor（实现类接口）**：它是定义实现类的接口，这个接口不一定要与 Abstraction 的接口完全一致，事实上这两个接口可以完全不同。Implementor  接口仅提供基本操作，而 Abstraction 定义的接口可能会做更多更复杂的操作。Implementor  接口对这些基本操作进行了声明，而具体实现交给其子类。通过关联关系，在 Abstraction 中不仅拥有自己的方法，还可以调用到 Implementor  中定义的方法，使用关联关系来替代继承关系。
+- **ConcreteImplementor（具体实现类）**：它具体实现了 Implementor  接口，在不同的 ConcreteImplementor  中提供基本操作的不同实现，在程序运行时 ConcreteImplementor  对象将替代其父类对象，提供给抽象类具体的业务操作方法。
+
+##### 桥接模式的实现
+
+实现情景：开发一款跨平台的图像浏览系统，要求能够显示 BMP、JPG、GIF、PNG 等多种格式的文件，并且能够在 Windows、Linux、Unix 等系统上运行。系统首先将各种格式的文件解析成像素矩阵（Matrix），然后将像素矩阵显示在屏幕上，在不同的操作系统中可以调用不同的绘制函数来绘制像素矩阵，系统需要有较好的扩展性，以便将来支持新的文件格式和操作系统。
+
+- 像素矩阵类
+
+```java
+/**
+ * 像素矩阵类，它是一个辅助类
+ * 各种格式的图像文件最终都被转化为像素矩阵
+ * 不同的操作系统提供不同的方式显示像素矩阵
+ */
+public class Matrix {
+    //代码省略
+}
+```
+
+- 抽象操作系统，充当实现类接口
+
+```java
+/**
+ * 抽象操作系统，充当实现类接口
+ */
+public interface OSImg {
+    //显示像素矩阵 matrix
+    void doPaint(Matrix matrix);
+}
+```
+
+- 具体操作系统，充当具体实现类
+
+```java
+/**
+ * Unix 操作系统，充当具体实现类
+ */
+public class UnixImg implements OSImg {
+    @Override
+    public void doPaint(Matrix matrix) {
+        //调用 Unix 系统的绘制函数绘制像素矩阵
+        System.out.print("在 Unix 操作系统中显示图像：");
+    }
+}
+
+/**
+ * Windows 操作系统，充当具体实现类
+ */
+public class WindowsImg implements OSImg {
+    @Override
+    public void doPaint(Matrix matrix) {
+        //调用 Windows 系统的绘制函数绘制像素矩阵
+        System.out.print("在 Windows 操作系统中显示图像：");
+    }
+}
+
+/**
+ * Linux 操作系统，充当具体实现类
+ */
+public class LinuxImg implements OSImg {
+    @Override
+    public void doPaint(Matrix matrix) {
+        //调用 Linux 系统的绘制函数绘制像素矩阵
+        System.out.print("在 Linux 操作系统中显示图像：");
+    }
+}
+```
+
+- 抽象图像类，充当抽象类
+
+```java
+/**
+ * 抽象图像类，充当抽象类
+ */
+public abstract class Image {
+    //子类可以调用
+    protected OSImg osImg;
+
+    //注入 实现类接口 对象
+    public void setOsImg(OSImg osImg) {
+        this.osImg = osImg;
+    }
+
+    //解析图像并显示，由子类实现
+    public abstract void parseFile(String fileName);
+}
+```
+
+- 扩充抽象类
+
+```java
+/**
+ * JPG 格式图像，充当扩充抽象类
+ */
+public class JPGImage extends Image {
+    @Override
+    public void parseFile(String fileName) {
+        //模拟解析 JPG 文件并获得一个像素矩阵对象 matrix
+        Matrix matrix = new Matrix();
+        osImg.doPaint(matrix);
+        System.out.println(fileName+"，格式为 JPG. ");
+    }
+}
+
+/**
+ * BMP 格式图像，充当扩充抽象类
+ */
+public class BMPImage extends Image {
+    @Override
+    public void parseFile(String fileName) {
+        //模拟解析 BMP 文件并获得一个像素矩阵对象 matrix
+        Matrix matrix = new Matrix();
+        osImg.doPaint(matrix);
+        System.out.println(fileName+"，格式为 BMP. ");
+    }
+}
+
+/**
+ * GIF 格式图像，充当扩充抽象类
+ */
+public class GIFImage extends Image {
+    @Override
+    public void parseFile(String fileName) {
+        //模拟解析 GIF 文件并获得一个像素矩阵对象 matrix
+        Matrix matrix = new Matrix();
+        osImg.doPaint(matrix);
+        System.out.println(fileName+"，格式为 GIF. ");
+    }
+}
+
+/**
+ * PNG 格式图像，充当扩充抽象类
+ */
+public class PNGImage extends Image {
+    @Override
+    public void parseFile(String fileName) {
+        //模拟解析 PNG 文件并获得一个像素矩阵对象 matrix
+        Matrix matrix = new Matrix();
+        osImg.doPaint(matrix);
+        System.out.println(fileName+"，格式为 PNG. ");
+    }
+}
+```
+
+- 测试客户端
+
+```java
+/**
+ * 桥接模式测试客户端
+ */
+public class ImageClient {
+    public static void main(String[] args) {
+        //操作系统类
+        OSImg osImg = new WindowsImg();
+        //图像类
+        Image image = new JPGImage();
+        image.setOsImg(osImg);
+
+        image.parseFile("smile");
+        //打印： 在 Windows 操作系统中显示图像：smile，格式为 JPG.
+    }
+}
+```
+
+
+
+##### 桥接模式和适配器模式联用及实现
+
+- **适配器模式**通常用于现有系统与第三方产品功能的集成，采用增加适配器的方式将第三方类集成到系统中。
+
+- **桥接模式**则不同，用户可以通过实现接口或类继承的方式对系统进行扩展。
+
+实现情景：在某系统的报表处理模块中需要将报表显示和数据输出分开，系统可以有多种报表显示方式也可以有多种数据输出方式，如将数据输出为文本文件，也可以输出为 Excel 文件，如果需要输出 Excel 文件，则需要调用与 Excel 相关的 API，而这个 API 是现有系统所不具备的，该 API 由厂商提供。使用桥接模式和类适配器模式来实现该系统：
+
+- 抽象报表显示类
+
+```java
+/**
+ * 报表显示，充当桥接模式抽象类
+ */
+public abstract class ReportDisplay {
+
+    //数据输出 引用
+    protected DataOutput dataOutput;
+
+    public void setDataOutput(DataOutput dataOutput) {
+        this.dataOutput = dataOutput;
+    }
+
+    //抽象显示方法
+    abstract void display();
+}
+```
+
+- 具体报表显示
+
+```java
+/**
+ * 第一种报表显示方式，充当扩充抽象类
+ */
+public class FirstDisplay extends ReportDisplay {
+    @Override
+    void display() {
+        System.out.println("第一种报表显示方式！");
+        dataOutput.output();
+    }
+}
+
+/**
+ * 第二种报表显示方式，充当扩充抽象类
+ */
+public class SecondDisplay extends ReportDisplay {
+    @Override
+    void display() {
+        System.out.println("第二种报表显示方式！");
+        dataOutput.output();
+    }
+}
+```
+
+- 数据输出（桥接模式实现类接口和适配器模式目标类）
+
+```java
+/**
+ * 数据输出，充当 桥接模式实现类接口、适配器模式目标抽象类
+ */
+public interface DataOutput {
+    void output();
+}
+```
+
+- 具体数据输出实现类
+
+```java
+/**
+ * 文本类型数据输出，充当桥接模式具体实现类
+ */
+public class TextDataOutput implements DataOutput {
+    @Override
+    public void output() {
+        System.out.println("输出文本类型数据");
+    }
+}
+
+/**
+ * Excel 类型数据输出，充当桥接模式具体实现类、适配器模式适配器类
+ */
+public class ExcelDataOutput extends ExcelAPI implements DataOutput {
+    @Override
+    public void output() {
+        //调用第三方适配者
+        super.deal();
+        System.out.println("输出 Excel 类型数据");
+    }
+}
+```
+
+- ExcelAPI（适配者类）
+
+```骄傲AV
+/**
+ * 第三方 ExcelAPI 类，充当适配器模式适配者类
+ */
+public class ExcelAPI {
+    public void deal() {
+        System.out.println("调用第三方 ExcelAPI 处理 Excel ");
+    }
+}
+```
+
+- 测试客户端
+
+```java
+/**
+ * 桥接模式和适配器模式（类）测试客户端
+ */
+public class ReportClient {
+    public static void main(String[] args) {
+        //创建数据输出对象
+//        DataOutput dataOutput = new TextDataOutput();
+        DataOutput dataOutput = new ExcelDataOutput();
+
+        //创建报表显示对象
+        ReportDisplay reportDisplay = new FirstDisplay();
+        reportDisplay.setDataOutput(dataOutput);
+
+        reportDisplay.display();
+    }
+}
+```
+
+##### 桥接模式的优缺点
+
+优点：
+
+- 分离抽象接口及其实现部分。桥接模式使用“对象间的关联关系”解耦了抽象和实现之间固有的绑定关系，使得抽象和实现可以沿着各自的维度来变化。
+- 在很多情况下，桥接模式可以替代多层继承方案，多层继承方案违背了单一职责原则，复用性较差，而且类的个数非常多。
+- 桥接模式提高了系统的可扩展性，在两个变化维度中任意扩展一个维度都不需要修改原有系统，复合开闭原则。
+
+缺点:
+
+- 桥接模式的使用会增加系统的理解与设计难度，由于关联关系建立在抽象层，要求开发者一开始就针对抽象层进行设计和编程。
+- 桥接模式要求正确地识别出系统中的两个独立变化的维度，因此其使用范围具有一定的局限性，如何正确识别两个独立维度也需要一定的经验积累。
+
+##### 桥接模式的适用环境
+
+- 如果一个系统需要在抽象化和具体化之间增加更多的灵活性，避免在两个层次之间建立静态的继承关系，通过桥接模式可以使它们在抽象层建立一个关联关系。
+- 一个类存在两个（或多个）独立变化的维度，且这两个（或多个）维度都需要独立进行扩展。
+- 对于那些不希望使用继承或因为多层继承导致系统类的个数急剧增加的系统，桥接模式尤为适用。
+
 
 
 ### 组合模式
