--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -1826,6 +1826,219 @@ public class ReportClient {
 
 ### 组合模式
 
+##### 组合模式的概述及定义
+
+- 概述：组合模式关注那些包含叶子构件和容器构件的结构以及它们的组织形式，在叶子构件中不包含成员对象，而容器构件中可以包含成员对象，这些对象通过递归组合可以构成一个树形结构。组合模式使用面向对象的方式来处理树形结构，它为叶子构件和容器构件提供了一个公共的抽象构建类，客户端可以针对抽象构建类编程，而无须关心操作的是叶子构件还是容器构件。
+- 定义：组合多个对象形成树形结构以表示具有部分-整体关系的层次结构。组合模式让客户端可以统一对待单个对象和组合对象。
+
+##### 组合模式的结构
+
+组合模式包含以下 3 个角色：
+
+- **Component（抽象构件）**：它可以是接口或抽象类，为叶子构件和容器构件对象声明接口，在该角色中可以包含所有子类共有行为的声明和实现。在抽象构件中定义了访问及管理它的子构件的方法，如增加、删除、获取子构件等。
+
+- **Leaf（叶子构件）**：它在组合结构中表示叶子节点对象，叶子节点没有子节点，它实现了在抽象构件中定义的行为。对于那些访问及管理子构件的方法，可以通过抛异常、提示错误等方式进行处理。
+
+- **Composite（容器构件）**：它在组合结构中表示容器节点对象，容器节点可以包含子节点，子节点可以是叶子节点也可以容器节点。它提供一个集合用于储存子节点，实现了在抽象构件中定义的行为，包含那些访问及管理子构件的方法，在其业务方法中可以递归调用其子节点的业务方法。
+
+##### 组合模式的实现
+
+**组合模式的关键是定义了抽象构件类，它既可以代表叶子，又可以代表容器**，客户端针对该抽象构件类进行编程，无须知道它到底表示的是叶子还是容器，可以对其进行统一处理。
+
+实现情景：开发一个杀毒（AntiVirus）软件，该软件既可以对文件夹（Folder）杀毒又可以对文件（File）杀毒。还可以根据各类文件的特点为不同类型的文件提供不同的杀毒方式，例如图像文件（ImageFile）和文本文件（TextFile）的杀毒方式就有所差异。
+
+- 抽象构件类
+
+```java
+/**
+ * 抽象文件类，充当抽象构件类
+ */
+public abstract class AbstractFile {
+    abstract void add(AbstractFile file);
+    abstract void remove(AbstractFile file);
+    abstract AbstractFile getChild(int i);
+    abstract void killVirus();
+}
+```
+
+- 叶子构件类
+
+```java
+/**
+ * 文本文件类，充当叶子构件
+ */
+public class TextFile extends AbstractFile {
+    private String name;
+
+    public TextFile(String name) {
+        this.name = name;
+    }
+
+    @Override
+    void add(AbstractFile file) {
+        System.out.println("对不起，不支持该方法！");
+    }
+
+    @Override
+    void remove(AbstractFile file) {
+        System.out.println("对不起，不支持该方法！");
+    }
+
+    @Override
+    AbstractFile getChild(int i) {
+        System.out.println("对不起，不支持该方法！");
+        return null;
+    }
+
+    @Override
+    void killVirus() {
+        //模拟杀毒
+        System.out.println(" --- 对文本文件 '"+name+"' 进行杀毒 ");
+    }
+}
+
+/**
+ * 图像文件类，充当叶子构件
+ */
+public class ImageFile extends AbstractFile {
+    private String name;
+
+    public ImageFile(String name) {
+        this.name = name;
+    }
+
+    @Override
+    void add(AbstractFile file) {
+        System.out.println("对不起，不支持该方法！");
+    }
+
+    @Override
+    void remove(AbstractFile file) {
+        System.out.println("对不起，不支持该方法！");
+    }
+
+    @Override
+    AbstractFile getChild(int i) {
+        System.out.println("对不起，不支持该方法！");
+        return null;
+    }
+
+    @Override
+    void killVirus() {
+        //模拟杀毒
+        System.out.println(" --- 对图像文件 '"+name+"' 进行杀毒 ");
+    }
+}
+```
+
+- 容器构件类
+
+```java
+/**
+ * 文件夹类，充当容器构件
+ */
+public class Folder extends AbstractFile {
+    //定义集合 files，用于储存 AbstractFile 类型的成员
+    private List<AbstractFile> files = new ArrayList<>();
+
+    private String name;
+
+    public Folder(String name) {
+        this.name = name;
+    }
+
+    @Override
+    void add(AbstractFile file) {
+        files.add(file);
+    }
+
+    @Override
+    void remove(AbstractFile file) {
+        files.remove(file);
+    }
+
+    @Override
+    AbstractFile getChild(int i) {
+        return files.get(i);
+    }
+
+    @Override
+    void killVirus() {
+        System.out.println(" --- 对文件夹 '"+name+"' 进行杀毒 ");
+        for (AbstractFile file : files) {
+            file.killVirus();
+        }
+    }
+}
+```
+
+- 测试客户端
+
+```java
+/**
+ * 组合模式测试客户端
+ */
+public class AntivirusClient {
+    public static void main(String[] args) {
+
+        AbstractFile file, file1, file2, file3,
+                folder, folder2, folder3;
+
+        file = new TextFile("九阴真经.txt");
+        file1 = new TextFile("葵花宝典.txt");
+        file2 = new ImageFile("小龙女.JPG");
+        file3 = new ImageFile("张无忌.JPG");
+
+        folder = new Folder("我的电脑");
+        folder2 = new Folder("文本文件");
+        folder3 = new Folder("图片文件");
+
+        folder2.add(file);
+        folder2.add(file1);
+        folder3.add(file2);
+        folder3.add(file3);
+
+        folder.add(folder2);
+        folder.add(folder3);
+
+        folder.killVirus();
+    }
+}
+```
+
+注意：在具体实现时可以创建图形化界面让用户来选择所需操作的根节点，无须修改源代码，复合开闭原则。用户也无须关心节点的层次结构。
+
+##### 透明组合模式和安全组合模式
+
+组合模式根据抽象构件类的定义形式又可以分为透明组合模式和安全组合模式。
+
+- 透明组合模式
+
+在透明组合模式中，抽象构件 Component 中声明了所有用于管理成员对象的方法，包括增删查，这样做的好处是确保所有的构件类都有相同的接口。在客户端看来，叶子对象和容器对象提供的方法是一致的，客户端可以一致的对待所有对象。缺点是不够安全，因为他们本质上是有区别的，叶子对象不可能有下一层次的对象，即不可能包含成员对象，因此为其提供 add()、remove() 等方法是没有意义的，在运行的时候可能会出错。
+
+- 安全组合模式
+
+在安全组合模式中，抽象构件 Component 中没有声明任何用于管理成员对象的方法，而是 Composite 类声明并实现这些方法。这样做是安全的，因为根本不向叶子对象提供这些管理成员对象的方法，对于叶子对象，客户端不可能调用到这些方法。它的缺点是不够透明，因为叶子构件和容器构件具有不同的方法，且容器构件中那些用于管理成员对象的方法没有在抽象构件类中定义，因此客户端不能完全针对抽象编程，必须有区别地对待叶子构件和容器构件。
+
+##### 组合模式的优缺点
+
+优点：
+
+- 可以清楚地定义分层次的复杂对象，表示对象的全部或部分层次，它让客户端忽略了层次的差异，方便对整个层次结构进行控制。
+- 客户端可以一致地使用一个组合结构或其中单个对象，不必关心处理的是单个对象还是整个组合结构，简化了客户端代码。
+- 在组合模式中增加新的容器结构和叶子结构都很方便，无须对现有类库进行修改。
+- 为树形结构的面向对象实现提供了一种灵活的解决方案，通过叶子对象和容器对象的递归组合可以形成复杂的树形结构，但对树形结构的控制缺非常简单。
+
+缺点：
+
+- 在增加新构件时很难对容器中的构件类型进行限制。例如文件夹中只能包含文本文件，在使用组合模式时不能通过依赖类型系统来施加这些约束，因为它们都来自于相同的抽象层，在这种情况下必须通过在运行时进行类型检查来实现。
+
+##### 组合模式的适用环境
+
+- 在具有整体和部分的层次结构中希望通过一种方式忽略整体与部分的差异，客户端可以一致地对待它们。
+- 在一个使用面向对象语言开发的系统中需要处理一个树形结构。
+- 在一个系统中能够分离出叶子对象和容器对象，而且它们的类型不固定，需要增加一些新的类型。
+
 
 
 ### 装饰模式
