--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -2043,6 +2043,185 @@ public class AntivirusClient {
 
 ### 装饰模式
 
+##### 装饰模式的概述及定义
+
+- 概述：装饰模式是一种用于替代继承的技术，它通过一种无须定义子类的方式来给对象动态增加职责，并使需要装饰的具体构件类和用于装饰的具体装饰类都可以独立变化。
+- 定义：动态地给一个对象增加一些额外的职责。就扩展功能而言，装饰模式提供了一种比使用子类更加灵活的替代方案。
+
+##### 装饰模式的结构
+
+装饰模式包含以下 4 中角色：
+
+- **Component（抽象构件）**：它是具体构件和抽象装饰类的共同父类，声明了在具体构件中实现的业务方法，它的引入可以使客户端以一致的方式处理未被装饰的对象以及装饰之后的对象，实现客户端的透明操作。
+- **ConcreteComponent（具体构件）**：它是抽象构件类的子类，用于定义具体的构建对象，实现了在抽象构件中声明的方法，装饰类可以给它增加额外二代职责（方法）。
+- **Decorator（抽象装饰类）**：它也是抽象构件类的子类，用于给具体构件增加职责，但是具体职责在其子类中实现。它维护一个指向抽象构件对象的引用，通过该引用可以调用装饰之前构件对象的方法，并通过其子类扩展该方法，已达到装饰的目的。
+- **ConcreteDecorator（具体装饰类）**：它是抽象装饰类的子类，负责向构件添加新的职责。每一个具体装饰类都定义了一些新的行为，它可以调用在抽象装饰类中定义的方法，并可以增加新的方法用于扩充对象的行为。
+
+##### 装饰模式的实现
+
+实现情景：开发一套图形界面构件库 VisualComponent，该构件库提供了大量的基本构件，如窗体、文本框、列表框等，由于在使用该构件库时用户经常要求定制一些特殊的显示效果，如带滚动条的窗体。带黑色边框的文本框，既带滚动条又带黑色边框的列表框，因此经常需要对该构件库进行扩展以增强其功能。
+
+- 抽象构件类
+
+```java
+/**
+ * 抽象界面构件类
+ */
+public abstract class Component {
+    public abstract void display();
+}
+```
+
+- 具体构件类
+
+```java
+/**
+ * 窗体类，充当具体构件类
+ */
+public class Window extends Component {
+    @Override
+    public void display() {
+        System.out.println("显示窗体");
+    }
+}
+
+/**
+ * 文本框类，充当具体构件类
+ */
+public class TextBox extends Component {
+    @Override
+    public void display() {
+        System.out.println("显示文本框");
+    }
+}
+
+/**
+ * 列表框类，充当具体构件类
+ */
+public class ListBox extends Component {
+    @Override
+    public void display() {
+        System.out.println("显示列表框");
+    }
+}
+```
+
+- 抽象装饰类
+
+```java
+/**
+ * 抽象构件装饰类
+ */
+public class ComponentDecorator extends Component {
+    //维持对抽象构件类型对象的引用
+    private Component component;
+
+    //注入抽象构件类型的对象
+    public ComponentDecorator(Component component) {
+        this.component = component;
+    }
+
+    @Override
+    public void display() {
+        //调用原有业务方法
+        component.display();
+    }
+}
+```
+
+- 具体装饰类
+
+```JAVA
+/**
+ * 滚动条装饰类，充当具体装饰类
+ */
+public class ScrollBarDecorator extends ComponentDecorator {
+    public ScrollBarDecorator(Component component) {
+        super(component);
+    }
+
+    @Override
+    public void display() {
+        this.setScrollBar();
+        super.display();
+    }
+
+    public void setScrollBar() {
+        System.out.println("为构件增加滚动条");
+    }
+}
+
+/**
+ * 黑色边框装饰类，充当具体装饰类
+ */
+public class BlackBorderDecorator extends ComponentDecorator {
+    public BlackBorderDecorator(Component component) {
+        super(component);
+    }
+
+    @Override
+    public void display() {
+        this.setBlackBorder();
+        super.display();
+    }
+
+    public void setBlackBorder() {
+        System.out.println("为构件增加黑色边框");
+    }
+}
+```
+
+- 测试客户端
+
+```java
+/**
+ * 装饰模式测试客户端
+ */
+public class DecoratorClient {
+    public static void main(String[] args) {
+        Component component,component1,component2;
+        //创建具体构件对象
+        component = new ListBox();
+        //创建装饰后的构件对象
+        component1 = new BlackBorderDecorator(component);
+        //将装饰了一次的对象注入另一个装饰类中，进行第二次装饰
+        component2 = new ScrollBarDecorator(component1);
+
+        component2.display();
+    }
+}
+```
+
+**总结：可以将一个装饰过的构件对象再次装饰。**
+
+##### 透明装饰模式和半透明装饰模式
+
+- 透明装饰模式（Transparent）
+
+  透明装饰模式要求客户端完全针对抽象编程，装饰模式的透明性要求客户端程序不应该将对象声明为具体构件类型或具体装饰类型，而应该全部声明为抽象构件类型。上面的例子就是透明装饰模式。
+
+- 半透明装饰模式（Semi-transparent）
+
+  有时需要单独调用新增的业务方法，为了能够调用到新增方法，不得不用具体装饰类型来定义装饰之后的对象，而具体构件类型仍然可以使用抽象构件类型来定义，这种装饰模式即为半透明装饰模式。它可以给系统带来更多的灵活性，设计相对简单，使用起来非常方便，**缺点是不能实现对同一个对象的多次装饰。**
+
+##### 装饰模式的优缺点
+
+优点：
+
+- 对于扩展一个对象的功能，装饰模式比继承更加灵活，不会导致类的个数急剧增加。
+- 可以对一个对象进行多次装饰，通过使用不同的具体装饰类以及这些装饰类的排列组合可以创造出很多不同行为的组合。
+- 具体构件类与具体装饰类可以独立变化，用户可以根据需要增加新的具体构件类和具体装饰类，原有代码无须改变，复合开闭原则。
+
+缺点：
+
+- 在使用装饰模式进行系统设计时将产生很多小对象。
+- 装饰模式提供了一种比继承更加灵活、机动的解决方案，但同时也意味着比继承更加易于出错，拍错也更困难，对于多次装饰的对象，在调试时寻找错误可能需要逐级排查，较为烦琐。
+
+##### 装饰模式的适用环境
+
+- 在不影响其他对象的情况下以动态、透明的方式给单个对象增加指责。
+- 当不能采用继承的方式对系统进行扩展或者采用继承不利于系统扩展和维护时可以使用装饰模式。
+
 
 
 ### 外观模式
