--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -2226,6 +2226,163 @@ public class DecoratorClient {
 
 ### 外观模式
 
+##### 外观模式的概述及定义
+
+- 概述：当一个客户端需要和多个业务类交互（子系统 Subsystem），而这些需要交互的业务类经常会作为一个整体出现，由于涉及的类比较多，导致使用时较为复杂，此时特别需要一个类似“服务员”（外观类 Facade）的角色，由它来复杂和多个业务类进行交互，它为多个业务类的调用提供了一个统一的入口，而客户端只需要和该类交互。**外观模式的迪米特法则的一种具体实现。**
+- 定义：为子系统中的一组接口提供一个统一的入口。外观模式定义了一个高层接口，这个接口使得这一子系统更加容易使用。
+
+##### 外观模式的结构
+
+外观模式包含以下两个角色：
+
+- **Facade（外观角色）**：客户端可以调用它的方法，在外观角色中可以知道相关（一个或多个）子系统的功能和职责；它将所有从客户端发来的请求委派到相应的子系统，传递给相应的子系统对象处理。
+- **SubSystem（子系统角色）**：在软件系统中可以有一个或多个子系统角色，每一个子系统可以不是一个单独的类，而是一个类的集合，它实现子系统的功能；每一个子系统都可以被客户端直接调用，或者被外观角色调用，它处理由外观类传过来的请求；子系统并不知道外观的存在，对于子系统而言，外观角色仅仅是另外一个客户端而已。
+
+##### 外观模式的实现
+
+实现场景：开发一个文件加密模块，该模块对文件内容加密后储存到一个新的文件中，具体流程包含 3 个部分，分别是读取源文件、加密、保存加密之后的文件，其中读取文件和保存文件使用流来实现，加密操作通过求模运算。这三个操作相互独立，让设计更符合单一职责原则，这 3 这个操作的业务代码封装在 3 个不同的类中。
+
+- 子系统角色类
+
+```java
+/**
+ * 文件读取类，充当子系统
+ */
+public class FileReader {
+    public String read(String fileNameSrc) {
+        System.out.print("读取文件，获取明文：");
+        StringBuilder builder = new StringBuilder();
+        try {
+            FileInputStream inputStream = new FileInputStream(fileNameSrc);
+
+            int data;
+            // return -1 if the end of the file is reached.
+            while ((data=inputStream.read()) != -1) {
+                builder.append((char) data);
+            }
+            //读取完毕，关流
+            inputStream.close();
+            System.out.println(builder.toString());
+
+        } catch (FileNotFoundException e) {
+            System.out.println("文件不存在");
+        } catch (IOException e) {
+            System.out.println("读取文件失败");
+        }
+        return builder.toString();
+    }
+}
+
+/**
+ * 数据加密类，充当子系统
+ */
+public class CipherMachine {
+    //求模运算
+    public String encrypt(String plainText) {
+        System.out.print("数据加密，将明文转换为密文：");
+        StringBuilder es = new StringBuilder();
+        for (int i = 0; i < plainText.length(); i++) {
+            String s = String.valueOf(plainText.charAt(i) % 7);
+            es.append(s);
+        }
+        System.out.println(es.toString());
+        return es.toString();
+    }
+}
+
+/**
+ * 文件保存类，充当子系统
+ */
+public class FileWriter {
+    public void write(String encryptStr, String fileNameDes) {
+        System.out.println("保存密文，写入文件。");
+
+        // try with resource 自动关闭流的语法
+        try (FileOutputStream outputStream = new FileOutputStream(fileNameDes)) {
+
+            outputStream.write(encryptStr.getBytes());
+        } catch (FileNotFoundException e) {
+            System.out.println("文件不存在！");
+        } catch (IOException e) {
+            System.out.println("保存文件出错！");
+        }
+    }
+}
+```
+
+- 加密外观类
+
+```java
+/**
+ * 加密外观类，充当外观类
+ */
+public class EncryptFacade {
+
+    //维持对子系统的引用
+    private FileReader fileReader;
+    private CipherMachine cipherMachine;
+    private FileWriter fileWriter;
+
+    public EncryptFacade() {
+        fileReader = new FileReader();
+        cipherMachine = new CipherMachine();
+        fileWriter = new FileWriter();
+    }
+
+    //调用子系统对象的业务方法
+    public void fileEncrypt(String fileNameSrc,String fileNameDes) {
+        //读取明文
+        String plainText = fileReader.read(fileNameSrc);
+        //加密后的密文
+        String encryptStr = cipherMachine.encrypt(plainText);
+        //保存文件
+        fileWriter.write(encryptStr, fileNameDes);
+    }
+}
+```
+
+- 客户端测试类
+
+```java
+/**
+ * 外观模式测试客户端
+ */
+public class FacadeClient {
+    public static void main(String[] args) {
+        EncryptFacade encryptFacade = new EncryptFacade();
+        String src = "src\\com\\piano\\structure\\facade\\test.txt";
+        String des = "src\\com\\piano\\structure\\facade\\test2.txt";
+
+        encryptFacade.fileEncrypt(src, des);
+    }
+}
+```
+
+##### 抽象外观类
+
+在标准的外观模式结构中，如果需要增加、删除或更换与外观类交互的子系统类，必须修改外观类或客户端代码，这将违反开闭原则。**引入抽象外观类，客户端可以针对抽象外观类编程，对于新的业务需求，不需要修改原有外观类，而对应增加一个新的具体外观类，由新的具体外观类来关联新的子系统对象，同时通过修改配置文件来达到不修改任何源代码并更换外观类的目的。**
+
+<img src="../assets/AbstractFacade.png" alt="AbstractFacade" style="zoom:80%;" />
+
+##### 外观模式的优缺点
+
+优点：
+
+- 它对客户端屏蔽了子系统组件，减少了客户端所需处理的对象数目，并使子系统使用起来更加容易。
+- 它实现了子系统与客户端之间的松耦合关系，这使得子系统的变化不会影响到调用它的客户端，只需要调整外观类即可。
+- 一个子系统的修改对其他子系统没有任何影响，而且子系统内部变化也不会影响到外观对象。
+
+缺点：
+
+- 不能很好的限制客户端直接使用子系统类，如果对客户端访问子系统类做太多限制则减少了可变性和灵活性。
+- 如果设计不当，增加新的子系统可能需要修改外观类的源代码，违背了开闭原则。
+
+##### 外观模式的适用环境
+
+- 当要为访问一系列复杂的子系统提供一个简单入口时可以使用外观模式。
+- 客户端程序与多个子系统之间存在很大的依赖性。引入外观类可以将子系统与客户端解耦，从而提高子系统的独立性和可移植性。
+- 在层次化结构中可以使用外观模式定义系统中的每一层的入口，层与层之间不直接产生联系，而通过外观类建立联系，降低层之间的耦合度。
+
 
 
 ### 享元模式
