--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -383,6 +383,8 @@ public class DatabaseLoggerFactory implements LoggerFactory {
 优点：
 
 - 在工厂方法模式中，工厂方法用来创建客户端所需要的产品，同时还向客户隐藏了哪种具体产品类将被初始化这一细节，用户只需要知道所需产品对象的工厂类即可，无需关心创建细节。
+- 
+- 
 - 基于工厂角色和产品角色的多态性设计师工厂方法模式的关键。它能够让工厂自主确定创建何种产品对象，而如何创建这个对象的细节完全封装在具体工厂内部。
 - 系统中加入新产品时无需修改抽象工厂和抽象产品提供的接口，无需修改客户端，也无需修改其他具体工厂和具体产品，而只要添加一个具体工厂和具体产品即可，这样系统的可扩展性好，完全符合开闭原则。
 
@@ -2386,6 +2388,230 @@ public class FacadeClient {
 
 
 ### 享元模式
+
+##### 享元模式的概述及定义
+
+- 概述：
+
+  - 当系统中存在大量相同或者相似的对象时，享元模式是一种值得考虑的解决方案，它通过**共享技术**实现相同或相似的细粒度对象的复用，从而节约了内存、提高系统性能。
+
+  - 享元模式能做到共享的关键是区分了内部状态（Intrinsic State）和外部状态（Extrinsic State）。**内部状态**是存在享元对象内部并且不会随环境改变而改变的状态，内部状态可以共享。**外部状态**是随环境改变而改变的、不可以共享的状态。享元对象的外部状态通常由客户端保存，并在享元对象被创建之后需要使用的时候再传入到享元对象内部。
+  - 正因为区分了内部状态和外部状态，可以将具有相同内部状态的对象存储在享元池中，享元池中的对象是可以实现共享的，当需要的时候就将对象从享元池中取出，实现对象的复用。通过**向取出的对象注入不同的外部状态可以得到一系列相似的对象**，而这些对象在内存中只存储一份。
+
+- 定义：运用**共享技术**有效地支持大量细粒度对象的复用。
+
+##### 享元模式的结构
+
+享元模式包含以下 4 个角色：
+
+- **Flyweight（抽象享元类）**：抽象享元类通常是一个接口或抽象类，在抽象享元类中声明了具体享元类公共的方法，这些方法可以向外界提供享元对象的内部数据（内部状态），同时也可以通过这些方法来设置外部数据（外部状态）。
+- **ConcreteFlyweight（具体享元类）**：具体享元类实现了抽象享元类，**它的实例称为享元对象；在具体享元类中为内部状态提供了存储空间。**通常可以结合单例模式设计具体享元类，为每一个具体享元类提供唯一的享元对象。
+- **UnsharedConcreteFlyweight（非共享享元工厂类）**：并不是所有的抽象享元类的子类都需要被共享，不能被共享的子类可设计为非共享具体享元类；当需要一个非共享具体享元类的对象时可以直接实例化创建。
+- **FlyweightFactory（享元工厂类）**：享元工厂类用于创建并管理享元对象，它针对抽象享元类编程，将各种类型的具体享元对象存储在一个享元池中，享元池中一般设计为一个存储“键值对‘的集合（也可以是其他类型的集合），可以结合工厂模式进行设计；当用户请求一个具体享元对象时，享元工厂提供一个存储在享元池中已创建好的实例或者创建一个新的实例（如果不存在），返回新创建的实例并将其存储在享元池中。
+
+##### 享元模式的实现
+
+实现情景：开发一个围棋软件，在围棋棋盘中包含大量的黑子和白子，它们的形状大小都一样，只是位置不同而已。如果将每一个棋子作为一个独立的对象存储在内存中，将导致该围棋软件在运行时所需的内存空间较大，那么如何降低运行代价、提高系统性能是需要解决的一个问题。
+
+- 抽象享元类
+
+```java
+/**
+ * 围棋棋子抽象类，充当抽象享元类
+ */
+public abstract class GoChessman {
+    public abstract String getColor();
+
+    public  void display() {
+        System.out.println("棋子颜色：" + this.getColor());
+    }
+}
+```
+
+- 具体享元类
+
+```java
+/**
+ * 黑色棋子类，充当具体享元类
+ */
+public class BlackGoChessman extends GoChessman {
+    @Override
+    public String getColor() {
+        return "黑色";
+    }
+}
+
+/**
+ * 白色棋子类，充当具体享元类
+ */
+public class WhiteGoChessman extends GoChessman {
+    @Override
+    public String getColor() {
+        return "白色";
+    }
+}
+```
+
+- 享元工厂类
+
+```java
+/**
+ * 围棋棋子工厂类，充当享元工厂类，使用单例模式对其进行设计
+ */
+public class GoChessmanFactory {
+    //饿汉式单例
+    private static GoChessmanFactory instance = new GoChessmanFactory();
+    //使用 Map 来存储享元对象，充当享元池
+    private Map<String, GoChessman> chessmanMap = null;
+
+    private GoChessmanFactory() {
+        chessmanMap = new HashMap<>();
+        System.out.println("初始化。。。");
+        GoChessman black, white;
+        black = new BlackGoChessman();
+        white = new WhiteGoChessman();
+        chessmanMap.put("black", black);
+        chessmanMap.put("white", white);
+    }
+
+    //返回享元工厂类的唯一实例
+    public static GoChessmanFactory getInstance() {
+        return instance;
+    }
+
+    //通过 key 获取存储在 map 中的享元对象
+    public GoChessman getGoChessman(String key) {
+        return chessmanMap.get(key);
+    }
+}
+```
+
+- 测试客户端
+
+```java
+/**
+ * 享元模式测试客户端
+ */
+public class FlyweightClient {
+    public static void main(String[] args) {
+        //获取享元工厂对象
+        GoChessmanFactory chessmanFactory = GoChessmanFactory.getInstance();
+
+        GoChessman back = chessmanFactory.getGoChessman("black");
+        GoChessman back2 = chessmanFactory.getGoChessman("black");
+        GoChessman white = chessmanFactory.getGoChessman("white");
+        GoChessman white2 = chessmanFactory.getGoChessman("white");
+
+        System.out.println("判断两个黑子是否相同：" + (back == back2));
+        System.out.println("判断两个白子是否相同：" + (white == white2));
+        back.display();
+        back2.display();
+        white.display();
+        white2.display();
+    }
+}
+```
+
+##### 有外部状态的享元模式
+
+分析上面实现可以发现，虽然黑色棋子和白色棋子可以共享，但是它们将显示在棋盘的不同位置，如何让相同的黑子或者白子能够多次重复显示且位于一个棋盘的不同地方？解决方案之一就是将位置定义为外部状态，在需要时再进行设置。将原有代码修改如下：
+
+- 坐标类
+
+```java
+/**
+ * 坐标类，充当外部状态
+ */
+public class Coordinates {
+
+    private int x;
+    private int y;
+	//省略 getter和setter方法
+    public Coordinates(int x, int y) {
+        this.x = x;
+        this.y = y;
+    }
+}
+```
+
+- 抽象享元类
+
+```java
+/**
+ * 围棋棋子抽象类，充当抽象享元类
+ */
+public abstract class GoChessman {
+    public abstract String getColor();
+
+    public void display(Coordinates coordinates) {
+        System.out.println("棋子颜色：" + this.getColor() +
+                "，棋子位置：" + coordinates.getX() + "，" + coordinates.getY());
+    }
+}
+```
+
+- 测试类
+
+```java
+/**
+ * 享元模式测试客户端
+ */
+public class FlyweightClient {
+    public static void main(String[] args) {
+        //获取享元工厂对象
+        GoChessmanFactory chessmanFactory = GoChessmanFactory.getInstance();
+
+        GoChessman back = chessmanFactory.getGoChessman("black");
+        GoChessman back2 = chessmanFactory.getGoChessman("black");
+
+        GoChessman white = chessmanFactory.getGoChessman("white");
+        GoChessman white2 = chessmanFactory.getGoChessman("white");
+
+        System.out.println("判断两个黑子是否相同：" + (back == back2));
+        System.out.println("判断两个白子是否相同：" + (white == white2));
+        back.display(new Coordinates(1,2));
+        back2.display(new Coordinates(10,12));
+        white.display(new Coordinates(7,8));
+        white2.display(new Coordinates(4,15));
+    }
+}
+```
+
+总结：**外部状态在需要的时候再传入。**
+
+##### 单纯享元模式和符合享元模式
+
+- 单纯享元模式
+
+  在单纯享元模式中，所有的具体享元类都是可以共享的，不存在非共享具体享元类。结构如图：
+
+  ![pure-flyweight](../assets/pure-flyweight.png)
+
+- 复合享元模式
+
+  将一些单纯享元对象使用组合模式加以组合，还可以形成复合享元对象，这样的复合享元对 象本身不能共享，但是它们可以分解成单纯享元对象，而后者则可以共享。结构如图：
+
+  ![composite-flyweight](../assets/composite-flyweight.png)
+
+  通过复合享元模式，可以确保复合享元类 CompositeConcreteFlyweight 中所包含的每个单纯享 元类 ConcreteFlyweight 都具有相同的外部状态，而这些单纯享元的内部状态往往可以不同。如果希望为多个内部状态不同的享元对象设置相同的外部状态，可以考虑使用复合享元模式。
+
+##### 享元模式的优缺点
+
+优点：
+
+- 可以极大减少内存中对象的数量，使得相同或相似对象在内存中只保存一份，从而可以节约系统资源，提高系统性能。
+- 享元模式的外部状态相对独立，而且不会影响其内部状态，从而使得享元对象可以在不同的环境中被共享。
+
+缺点：
+
+- 享元模式使得系统变得复杂，需要分离出内部状态和外部状态，这使得程序的逻辑复杂化。
+- 为了使对象可以共享，享元模式需要将享元对象的部分状态外部化，而读取外部状态将使得运行时间变长。
+
+##### 享元模式的适用环境
+
+- 一个系统有大量相同或者相似的对象，造成内存的大量耗费。
+- 对象的大部分状态都可以外部化，可以将这些外部状态传入对象中。
+- 在使用享元模式时需要维护一个存储享元对象的享元池，而这需要耗费一定的系统资源， 因此，应当在需要多次重复使用享元对象时才值得使用享元模式。
 
 
 
